Testcases/pos/test03.jl
function main()
println("test")

end
main()
