Testcases/neg/test16.jl
# multiple instructions in one line

function main()
    println(1) println(2)
end

main()


